public/css/styles.css
/* ... */
.wrapper .sidebar .sidebar-menu .item .menu-btn{
  display: block;
  background:  var(--primary-color);
  position: relative;
  padding: 25px 20px;
  transition: 0.3s;
  transition-property: color;
}

.wrapper .sidebar .sidebar-menu .item .menu-btn:hover{
  color: var(--green);
}

.wrapper .sidebar .sidebar-menu .item .menu-btn i{
  margin-right: 20px;
  /* color: red; */
}

.wrapper .sidebar .sidebar-menu .item .menu-btn span{
  position:absolute;
  left:75px;
  color:var(--secondary-color);
}

/* @media screen and (max-width: 1750px) {
  .sidebar-btn { 
            display: none;
           }
} */


/*************/
/* CONTAINER */
/*************/


.wrapper .main-container {
  /* width: (100% - 250px);
  margin-left: 250px; */
  /* padding: 15px; */
 /* height: 100%; */
  transition: 0.3s;
}


/********************/
/* COLLAPSE SIDEBAR */
/********************/


.wrapper.collapse_menu .sidebar {
  width: 60px;
}

.wrapper.collapse_menu .sidebar .profile img,
.wrapper.collapse_menu .sidebar .profile p,
.wrapper.collapse_menu .sidebar a span {
  display: none;
}

.wrapper.collapse_menu .main-container {
  width: (100% - 70px);
  margin-left: 60px;
}


/*************/
/* CONTENT */
/*************/


.wrapper .main-container .content {
  /* background: red; */
  padding: 20px;
  margin-top: 100px;
  font-size: 16px;
  margin-bottom: 10px;
}



/**************/
/* LOGIN FORM */
/**************/


.global-container{
	height:100%;
	display: flex;
	align-items: center;
	justify-content: center;
}

form{
	padding-top: 10px;
	font-size: 14px;
	margin-top: 30px;
}

.card-title{ font-weight:300; }

.login-form{ 
  width:330px;
	margin:20px;
}


/*****************/
/* TOGGLE BUTTON */
/*****************/


.on, .off {
  color: white;
  border-radius: 6px;
  text-align: center;
  padding: 3px 8px;
  max-width: 100%;
}
.on{ 
  background-color: green;
}

.off { 
  background-color: red;
}


/*********/
/* FORMS */
/*********/


th {
  text-transform: uppercase;
  font-weight: bold;
  padding-bottom: 18px !important
}

tr th, tr {
  text-align: center;
}

/* tr {
  text-align: center;
} */

@media screen and (max-width: 995px) {
  tr th, tr  { 
    text-align:start;
           }
}
/**************/
/* LOGIN PAGE */
/**************/


.homepage{
  min-height:100vh;
  display:flex;
  background:url("/images/bg3.jpg");
  align-items:center;
  justify-content:center;
}
.login-container{
  background:#fff;
  /* opacity: 0.9; */
  border-radius: 16px;
  text-align: center;
  max-width:480px;
  width:100%;
  padding:20px;
  margin:20px;
}

.banner-heading {
  color: black;
  text-align: center;
  padding: 1.5rem 2rem;
  border-radius: 1rem;
  position: relative;
  z-index: 1;
  background: inherit;
  overflow: hidden;
  margin: 0 2rem;
}

.banner-heading:before {
	content: "";
	position: absolute;
	background: inherit;
	z-index: -1;
	inset: 0;
	filter: blur(1.6rem);
	margin: -1.5rem;
}


/*************/
/* PRELOADER */
/*************/


.preloader {
  height: 100%;
  width: 100%;
  background: #fff;
  position: fixed;
  left: 0;
  top: 0;
  z-index: 10000;
  perspective: 1600px;
  perspective-origin: 20% 50%;
  transition: 0.5s all;
  opacity: 1;
}

.spinner {
  width: 80px;
  height: 80px;
  border: 2px solid #f3f3f3;
  border-top: 3px solid var(--green);
  border-radius: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  animation: spin 1s infinite linear;
}

.preloader.fade {
  opacity: 0;
}

.icon-preloader {
  background-size: cover;
  width: 52px;
  height: 67px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  animation: ico 5s infinite linear;
  transform-style: preserve-3d;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes ico {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateY(360deg);
  }
}

/**********/
/* FOOTER */
/**********/


footer {
  /* position: relative;
  bottom: 0; */
  width: 100%;
}



/******************/
/* CREATION FORMS */
/******************/


input {
  margin-bottom: 18px;
}

.control-label {
  margin-bottom: 10px;
  font-weight: bold;
}


/******************/
/* CREATION FORMS */
/******************/

/* textarea, label {
  width: 100%;
}

input {
  width: 100%;
  margin-bottom: 16px;
  padding: 6px 3px;
}

@media all and (min-width: 700px) {
  input {
    width: 25%;
  }
} */


/**********************/
/* PARTNER PAGE CARDS */
/**********************/


 .box{
  border-radius: 8px;
  border: 1px solid #cccccc;
  padding: 10px;
  transition: all linear 200ms;
}
.box:hover{
  transform: scale(1.05);
  transition: all linear 200ms;
  z-index: 1;
  box-shadow: 1px 1px 10px rgba(0,0,0,.3);
  cursor: pointer;
} 

.box-button {
  color: red;
}

